impl redis repo & stock endpoint
