# models/stock_values.go
@@ -1,0 +1,49 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// StockValues stock values
+//
+// swagger:model stockValues
+type StockValues struct {
+
+	// number of values
+	Count int64 `json:"count,omitempty"`
+
+	// stock label
+	Label string `json:"label,omitempty"`
+
+	// values
+	Values []float64 `json:"values"`
+}
+
+// Validate validates this stock values
+func (m *StockValues) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *StockValues) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *StockValues) UnmarshalBinary(b []byte) error {
+	var res StockValues
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
